--- a/src/index.css
+++ b/src/index.css
@@ -44,10 +44,11 @@
   --color-chart-4: hsl(var(--chart-4));
   --color-chart-5: hsl(var(--chart-5));
 
-  /* modified and updated */
-  /* colors */
-  --color-add-on-primary-altered: var(--add-on-primary-altered);
-  --color-primary-blue: hsl(var(--primary-blue));
+  /* modified */
+  --color-border: hsl(var(--border));
+  --color-brand: hsl(var(--brand));
+  --color-surface-weak: hsl(var(--surface-weak));
+  --color-border-weak: hsl(var(--border-weak));
 
   /* fonts */
   --font-sans: "Inter", sans-serif;
@@ -73,6 +74,7 @@
 
 @layer base {
   :root {
+    --brand: 215 16% 47%;
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
@@ -98,11 +100,11 @@
     --chart-4: 45, 93%, 47%, 1;
     --chart-5: 271, 81%, 56%, 1;
     --radius: 0.5rem;
-    /* modified and updated */
-    --add-on-primary-altered: #64748b;
-    --blue-400: #60a5fa;
-    --purple-700: #7e22ce;
-    --primary-blue: 215 25% 27%;
+
+    /* modified */
+    --border: 213, 27%, 84%;
+    --border-weak: 214, 32%, 91%;
+    --surface-weak: 210, 40%, 96%;
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -147,23 +149,7 @@
 }
 
 @layer utilities {
-  .text-primary-gradient {
-    @apply bg-clip-text text-transparent;
-    -webkit-background-clip: text;
-    background-image: linear-gradient(
-      170deg,
-      #60a5fa 0%,
-      #7e22ce 51%,
-      #f30ee9 100%
-    );
-  }
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
 }
